--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximun-scale=1"/>
 	<link rel="stylesheet" href="css/normalize.css">
-	<link rel="stylesheet" href="css/styles-dist.css"/>
+	<link rel="stylesheet" href="css/styles.css"/>
 </head>
 <body>
 	<header class="header">
